Update integration test to use updated Docker link functionality.

--- a/src/it/build-test-it/hello-world.yml
+++ b/src/it/build-test-it/hello-world.yml
@@ -3,7 +3,7 @@ defaultId: 1
 database:
   driverClass: com.mysql.jdbc.Driver
   user: root
-  url: jdbc:mysql://localhost:3306/test
+  url: jdbc:mysql://example_mysql:3306/test
   properties:
     charSet: UTF-8
     hibernate.dialect: org.hibernate.dialect.MySQLDialect
